[#DCMEE-1431] Increase the default permgen space for the Java process